[project]
name = "traceable-agentic-rag"
version = "0.1.0"
description = "Rust Book Documentation Assistant with Agentic RAG, tracing, and evaluation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "pydantic-settings>=2.14.2",
]

[project.scripts]
traceable-agentic-rag = "traceable_agentic_rag:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "ty>=0.0.53",
]

# =====================
# Tool Configurations
# =====================

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # Ruff formatter handles line length

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"

[tool.ty]
environment = { root = ["src"] }
